--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>Todo List</title>
     <link rel="stylesheet" href="assets/css/todos.css">
     <script src="assets/js/lib/jquery-3.5.1.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
 </head>
 <body>
     
     <div id="container">
         <h1>To-Do List</h1>
-        <input type="text" name="todo" id="">
+        <input type="text" placeholder="Add new Todo" name="todo" id="">
 
         <ul>
             <li><span>X</span> Eat</li>
