--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
     <link rel="stylesheet" href="assets/css/todos.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="assets/js/lib/jquery-3.5.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
 </head>
 <body>
     
     <div id="container">
-        <h1>To-Do List</h1>
-        <input type="text" placeholder="Add new Todo" name="todo" id="">
+        <h1>To-Do List <span id="toggle-form"><i class="fa fa-plus"></i></span></h1>
+        <input type="text" placeholder="Add new Todo" name="todo" maxlength="40">
 
         <ul>
-            <li><span>X</span> Eat</li>
-            <li><span>X</span> Sleep</li>
-            <li><span>X</span> Repeat</li>
+            <li><span><i class="fa fa-trash"></i></span> Eat</li>
+            <li><span><i class="fa fa-trash"></i></span> Sleep</li>
+            <li><span><i class="fa fa-trash"></i></span> Repeat</li>
         </ul>
     </div>
     <script src="assets/js/todos.js"></script>
